# pyPrediktorMapClient

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  TODO.md  authors.html  changelog.html  contributing.html  dwh.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-cd-webhook.yml  codeql-analysis.yml  pages.yml  (+2 more)
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js
api/: modules.html  pyprediktormapclient.dwh.context.html  pyprediktormapclient.dwh.html  pyprediktormapclient.html
docs/: conf.py  dwh.rst  index.rst
examples/: get_and write_historical_opc_ua_values.py  get_and write_opc_ua_values.py  get_historical_opc_ua_values_with_auth.py
notebooks/: Example_Data_Downloading.ipynb  Exploring_API_Functions.ipynb  Exploring_API_Functions_Authentication.ipynb  New_functions_test.ipynb  Test_API_Functions_New_Features.ipynb  api_performance_testing.ipynb  api_performance_testingapi_performance_testing.ipynb  auth.ipynb  compare_lib.ipynb  model_index_sparql_integration.ipynb  newTest_functions.ipynb  test_functions.ipynb
tests/: analytics_helper_test.py  auth_client_test.py  conftest.py  model_index_test.py  opc_ua_test.py  shared_test.py  test_analytics_helper.py  test_auth_client.py  test_dwh.py  test_model_index.py  test_opc_ua.py  test_ory.py  test_shared.py  test_skeleton.py
(+63 files in other folders)
