[tool.poetry]
name = "pyprediktormapclient"
version = "0.1.0"
description = ""
authors = ["MeenaBana <meenabana@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.15.1"
pandas = "^1.4.3"
urllib3 = "^1.26.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
