[tool.poetry]
name = "pyprediktormapclient"
version = "0.1.0"
description = ""
authors = ["MeenaBana <meenabana@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.15.1"
pandas = "^1.4.3"
requests = "^2.28.1"
aiohttp = "^3.8.1"
pyarrow = "^9.0.0"
dask = {extras = ["diagnostics"], version = "^2022.8.0"}
Jinja2 = "^3.1.2"
ipython-autotime = "^0.3.1"

[tool.poetry.dev-dependencies]
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
